Initial commit - ECB to Stanford Within document coref